--- a/.github/workflows/nightly build at 11pm.yml
+++ b/.github/workflows/nightly build at 11pm.yml
@@ -1,53 +1,25 @@
-name: run unit tests of feature branches
+name: nightly build at 11pm
 
 on:
-  push:
-    branches: 
-      'feature/*'
-
+  schedule:
+    - cron: '0 23 * * *'
 
 jobs:
-  run-unit-test:
+  nightly_build:
     runs-on: ubuntu-latest
-
-
-    steps: 
+    steps:
       - name: Checkout
         uses: actions/checkout@v3.3.0
 
 
-      - name: run unit test
+      - name: Run Unit Tests
         run: mvn test
-          
-       - name: Prepare for Build with Apache Maven
-       # You may pin to the exact commit or the version.
-       # uses: sualeh/prepare-maven-build@7f3e870ae1b4444089875851fb9f071400b390a3
-       uses: sualeh/prepare-maven-build@v1.3.5
-       with:
-         # Java version
-         java-version: # default is 8
-         # git branch to checkout
-         checkout-branch: # optional, default is 
-                  
 
-                - name: Upload a Build Artifact
-            uses: actions/upload-artifact@v3.1.3
-            with:
-              # Artifact name
-              name: # optional, default is artifact
-              # A file, directory or wildcard pattern that describes what to upload
-              path: 
-              # The desired behavior if no files are found using the provided path.
-               Available Options:
-                 warn: Output a warning but do not fail the action
-                 error: Fail the action with an error message
-            ignore: Do not output any warnings or errors, the action does not fail
+      - name: Build with Maven
+        run: mvn -DskipTests -B package --no-transfer-progress --file ./pom.xml
 
-              if-no-files-found: # optional, default is warn
-              # Duration after which artifact will expire in days. 0 means using default retention.
-          Minimum 1 day. Maximum 90 days unless changed from the repository settings page.
-
-              retention-days: # optional
-                  
-     
+      - uses: actions/upload-artifact@master
+        with:
+          name: digibank.war
+          path: ./target/*digitalbank*.war
      
