--- a/.github/workflows/chapter5-e2e-pipeline.yml
+++ b/.github/workflows/chapter5-e2e-pipeline.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Run Unit Tests
         run: mvn test
         analyze:
-    name: Analyze
-    runs-on: ubuntu-latest
+    - name: Analyze
+      runs-on: ubuntu-latest
     permissions:
       actions: read
       contents: read
